--- a/src/app/components/role-search/role-search.component.css
+++ b/src/app/components/role-search/role-search.component.css
@@ -1,7 +1,3 @@
-.search-container {
-  margin-bottom: 1rem;
-}
-
 .visually-hidden {
   position: absolute;
   width: 1px;
